# alg_o

./: .gitignore  LICENSE  README.md  pyproject.toml
src/alg_o/: __init__.py
src/alg_o/analysis/: __init__.py  estimator.py  result.py
src/alg_o/benchmark/: __init__.py  config.py  result.py  runner.py
src/alg_o/config/: __init__.py  benchmark.py  estimation.py
src/alg_o/exception/: __init__.py  errors.py
src/alg_o/generation/: __init__.py  base.py  generators.py  resolver.py  signature.py  types.py
src/alg_o/plotting/: __init__.py  plotter.py
src/alg_o/regression/: __init__.py  base.py  fitter.py  models.py  result.py
tests/: test_analysis.py  test_benchmark.py  test_coverage.py  test_exception.py  test_generation.py  test_plotting.py  test_regression.py
tests/functional/: conftest.py  helpers.py  test_analysis_pipeline.py  test_benchmark_runner_pipeline.py  test_generation_structures.py  test_generation_supported_types.py  test_regression_known_complexities.py
